# tristanscl.github.io

./: Gemfile  README.md  _commands.txt  _config.yml  about.md  index.md  projects.md  pyproject.toml
_includes/: head.html  mathjax.html
_layouts/: default.html
_posts/: 2026-01-05-welcome-to-jekyll.markdown  2026-02-14-dca.md
_projects/: cashflow.md  fusex-2024.md  other-project.md  tchaikowsky.md  turbocharger.md  valeo.md
_projects/fusex-2024/: index.md
simulations/dca/: dca.ipynb
test/: some_file.md
